# code

./: .gitignore
C/: 1.counting_rooms  11.collecting_numbers  13.playlist  14.towers  2.labyrinth  2.minimizing_coins  3.building_roads  3.coin_combinations_1  3.ferris_wheel  4.coin_combinations_2  4.concert_tickets  5.permutations  6.grid_paths  6.number_spiral  7.sum_of_two_values  8.bit_strings  8.two_sets  9.bit_strings  9.stick_lengths  Makefile  a.out  barrier  btree.c  client  cocurrent_queue.c  concurrent-counter.c  concurrent-hash_table.c  concurrent-linked-list.c  concurrent_counter.c  concurrent_hash_table.c  conditional_variable.c  fileio.c  fork_join.c  hand-over-hand-linked-list.c  heap_test  inotify.c  ip_address  main  main.c  meson.build  (+12 more)
C/CSES/1.Introductory Problems/: 2.missing_number.c  5.permutations.c  6.number_spiral.c
C/CSES/2.Sorting and Searching/: 1.distinct_number.cpp  10.missing_coin_sum.cpp  11.collecting_numbers.cpp  13.playlist.cpp  14.towers.cpp  2.apartments.cpp  3.ferris_wheel.cpp  7.sum_of_two_values.cpp  8.maximum_subarray_sum.cpp  9.stick_lengths.cpp  a.out
C/CSES/3.Dynamic Programming/: 1.dice_combinations.cpp  2.minimizing_coins.cpp  3.coin_combinations_1.cpp  4.coin_combinations_2.cpp  5.removing_digits.cpp  6.grid_paths.cpp  a.out
C/CSES/4.Graph/: 1.counting_rooms.cpp  2.labyrinth.cpp  3.building_roads.cpp  a.out
C/CSES/Introductory Problems/: 1.weird_algorithm.c  10.trailling_zeros.c  3.repetitions.c  4.increasing_array.c  5.permutations.c  7.two_knights.c  8.two_sets.c  9.bit_strings.c  a.out
C/CSES/Sorting and Searching/: 4.concert_tickets.cpp  5.restaurant_customers.cpp  6.movie_festival.cpp  a.out
C/CSES/sort_search/: 1.distinct_number.cpp
C/books/ostep/semaphore/: a.out  barrier.c  (+3 more)
C/ostep/semaphore/: a.out  barrier.c  mutex-nostarve.c  producer_consumer.c  reader-writer.c  rendezvous.c  resuable_barrier.c  zemaphore.c
C/ostep/thread_bugs/: main-common.c  vector-deadlock  vector-nolock.c  vector-try-wait.c
C/projects/cat/: cat.c  cat_io_uring.c  cat_liburing.c  cat_mmap.c
C/projects/cp/: cp.c  cp_io_uring.c  cp_liburing.c  cp_liburing_2  cp_liburing_2.c  cp_liburing_2.h  cp_liburing_2_test.c  test2.c
C/projects/mapreduce/: Makefile  description.md  heap.c  kv.c  kv.h  kv_test  kv_test.c  mapreduce.c  mapreduce.h  shard.c  shard.h  shard_test  shard_test.c  task_queue.c  task_queue.h  thread_helper.h  threadpool.c  threadpool.h  threadpool_test.c
C/projects/reliable_udp/: Makefile  client  client.c  io.c  quic.c  server  server.c  util.c
C/stuff/: a.out  rr.cpp
C/unix/: a.out  copy_file.c  util.h
C/unix/file io/: a.out  copy_file.c  copy_file_2.c  copy_file_O_SYNC.c  copy_file_change_flags.c  copy_file_fdatasync.c  copy_file_fsync.c  file_flags.c
C/unix/files_dirs/: a.out  apue.h  file_types.c
C/unix/ipc/: read  shared_memory_read.c  shared_memory_write.c  shm_client.c  shm_server.c  write
C/unix/socket/: a.out  client  client.c  ip_address.c  showip  showip.c  socket.c
(+224 files in other folders)
